force-app/main/default/objects/Creditsafe_Comp_Additional_Info_Comment__c/Creditsafe_Comp_Additional_Info_Comment__c.object-meta.xml
<CustomObject>
    <description>Class Commentary.</description>
    <label>Creditsafe Comp Additional Info Comment</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Creditsafe Comp Additional Info Comment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Creditsafe Comp Additional Info Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>