force-app/main/default/objects/Creditsafe_Comp_Additional_Info_Comment__c/fields/Creditsafe_Company_Additional_Info_DE__c.field-meta.xml
<CustomField>
    <fullName>Creditsafe_Company_Additional_Info_DE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A CreditsafeCompanyAdditionalInformationDEAdditionalInformationV2</description>
    <label>Creditsafe Company Additional Info DE</label>
    <referenceTo>Creditsafe_Company_Additional_Info_DE__c</referenceTo>
    <relationshipLabel>Creditsafe Comp Additional Info Comments</relationshipLabel>
    <relationshipName>Creditsafe_Comp_Additional_Info_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>