force-app/main/default/objects/Creditsafe_Comp_Additional_Info_Comment__c/fields/Creditsafe_Company_Report_Full__c.field-meta.xml
<CustomField>
    <fullName>Creditsafe_Company_Report_Full__c</fullName>
    <description>A detailed report about a company.</description>
    <label>Creditsafe Company Report Full</label>
    <referenceTo>Creditsafe_Company_Report_Full__c</referenceTo>
    <relationshipLabel>Creditsafe Comp Additional Info Comments</relationshipLabel>
    <relationshipName>Creditsafe_Comp_Additional_Info_Comments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>