force-app/main/default/objects/Creditsafe_Comp_Additional_Info_Comment__c/fields/Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Sentiment__c</fullName>
    <description>This shows an arrow indicating if the trend has improved or decreased etc.</description>
    <label>Sentiment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>