force-app/main/default/objects/Creditsafe_Comp_Additional_Info_Comment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of comment</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>