force-app/main/default/objects/Creditsafe_Comp_Additional_Info_Comment__c/recordTypes/DE_Comments.recordType-meta.xml
<RecordType>
    <fullName>DE_Comments</fullName>
    <active>true</active>
    <label>DE Comments</label>
</RecordType>