force-app/main/default/objects/Creditsafe_Comp_Additional_Info_Comment__c/recordTypes/NL_Comments.recordType-meta.xml
<RecordType>
    <fullName>NL_Comments</fullName>
    <active>true</active>
    <label>NL Comments</label>
</RecordType>